# hansard-researcher

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  LICENSE  LICENSES-DATA.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
dashboards/: .gitignore  evidence.config.yaml  package-lock.json  package.json
dashboards/pages/: bills.md  divisions.md  index.md  members.md  question-time.md  sittings.md  themes-compare.md  themes.md
dashboards/sources/hansard/: bill_journey.sql  bill_theme_link.sql  bills.sql  connection.yaml  contributions.sql  division_summary.sql  division_votes_detail.sql  member_activity.sql  member_activity_by_week.sql  member_theme_rank.sql  member_vote_by_theme.sql  qa_pairs.sql  sitting_days.sql  subject_occurrence.sql  theme_by_week.sql  theme_candidates.sql  theme_cooccurrence.sql  theme_coverage.sql  theme_share_by_jurisdiction.sql  theme_subject_names.sql
docs/: ROADMAP.md  era-census.md  hf_dataset_card.md  theme-model-comparison-2026-06-18.md
schemas/: canonical.schema.json
scripts/: hf_publish.py
src/hansard_researcher/: __init__.py  api.py  cli.py  mcp_server.py
src/hansard_researcher/aggregate/: __init__.py  coverage.py  cubes.py
src/hansard_researcher/enrich/: __init__.py  embed.py  providers.py  qdrant.py  search.py  themes.py
src/hansard_researcher/harvest/: __init__.py  au.py  base.py  hansard_api.py  nsw.py  nz.py  sa.py  scot.py  store.py  wa.py
src/hansard_researcher/model/: __init__.py  canonical.py  hashing.py  ids.py
src/hansard_researcher/normalize/: au_unixml.py  canonical_xml.py  clock.py  kinds.py  nsw_xml.py  runner.py  silver.py
src/hansard_researcher/reference/: __init__.py  nsw.py  register.py  sa.py  stages.py  themes.py
src/hansard_researcher/static/: index.html
src/parlhansard/: __init__.py  cli.py
src/parlhansard/aggregate/: cubes.py
src/parlhansard/enrich/: __init__.py  embed.py  providers.py  qdrant.py  search.py  themes.py
src/parlhansard/harvest/: __init__.py  au.py  base.py  hansard_api.py  nsw.py  nz.py  sa.py  scot.py  store.py  wa.py
src/parlhansard/model/: __init__.py  canonical.py  hashing.py  ids.py
src/parlhansard/normalize/: __init__.py  au_unixml.py  runner.py  (+3 more)
tests/: conftest.py  test_aggregate.py  test_api.py  test_au_adapter.py  test_au_unixml.py  test_canonical_xml.py  test_cli.py  test_clock.py  test_division_variants.py  test_enrich.py  test_enrich_themes.py  test_hansard_api.py  test_harvest_registry.py  test_hashing.py  test_ids.py  test_kinds.py  test_mcp_server.py  test_model.py  test_nsw_adapter.py  test_nsw_xml.py  test_qdrant.py  test_reference_nsw.py  test_reference_sa.py  test_runner.py  test_silver.py  test_stages.py  test_themes.py
tests/fixtures/: au_daily.xml  extract_0001.xml  extract_0002.xml  extract_events.xml  nsw_fragment_1.xml  nsw_fragment_2.xml  nsw_fragment_division.xml  nsw_fragment_legacy.xml  nsw_toc.xml
(+15 files in other folders)
