[project]
name = "parlhansard"
version = "0.0.1"
description = "Open-source analytics extraction pipeline for Parliamentary Hansard daily XML (WA, SA, NSW, AU Federal, NZ, Scotland)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "parlhansard contributors" }]
keywords = ["hansard", "parliament", "open-data", "civic-tech"]
dependencies = [
    "pydantic>=2.7",
    "lxml>=5.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "duckdb>=1.0",
    "pyarrow>=16.0",
]

[project.scripts]
parlhansard = "parlhansard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parlhansard"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# fixture HTML mirrors real calendar markup — long URLs stay verbatim
"tests/test_au_adapter.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
