[project]
name = "hansard-researcher"
version = "0.0.1"
description = "Open-source analytics extraction pipeline for Parliamentary Hansard daily XML (WA, SA, NSW, AU Federal, NZ, Scotland)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "hansard-researcher contributors" }]
keywords = ["hansard", "parliament", "open-data", "civic-tech"]
dependencies = [
    "pydantic>=2.7",
    "lxml>=5.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
    # IANA zone database for zoneinfo on Windows (no system tzdb there);
    # the running-clock backfill localizes sitting times per jurisdiction
    "tzdata>=2024.1",
]

[project.optional-dependencies]
# in-process embeddings for the 'local' enrichment provider (pulls torch);
# every other provider (ollama/lmstudio/openai/...) needs only the base install
local = ["sentence-transformers>=3.0"]
mcp = [
    "mcp>=1.0",
]
# Tier 2 hosted search API (metadata + official-source links only, never prose)
api = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
]

[project.scripts]
hansard-researcher = "hansard_researcher.cli:main"

[dependency-groups]
dev = [
    "mcp>=1.0",
    "fastapi>=0.110",
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hansard_researcher"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# fixture HTML mirrors real calendar markup — long URLs stay verbatim
"tests/test_au_adapter.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
